fix: correct size, opacity and gap for form

--- a/style.css
+++ b/style.css
@@ -170,25 +170,25 @@ button:hover {
 /* below are styles for the form */
 
 .right form {
-    width: 80%;
+    width: 70%;
     display: flex;
     font-size: 0.8rem;
-    gap: 100px;
+    /* justify-content: flex-end; */
+    gap: 80px;
     letter-spacing: 2px;
 }
 
 form div {
-    width: 80%;
     flex: 1;
     display: flex;
     flex-direction: column;
 }
 
 input {
-    font-size: 1.2rem;
+    height: 35px;
+    font-size: 1rem;
     margin-bottom: 15px;
     flex: 1, 1, 70%;
-    border: 1px solid #000;
-    opacity: 0.2;
+    border: 1px solid rgb(0, 0, 0, 0.2);
     border-radius: 5px;
 }
